# bridge-relayer

./: .gitignore  .gitmodules  Cargo.toml  Jenkinsfile  README.md
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: build_and_test.yml  static_analysis.yml
ethereum-gen/: Cargo.toml  build.rs
ethereum-gen/abi/: FAApp.json  TestChannelHandler.json  TestToken.json
ethereum-gen/src/: lib.rs
evm-client/: Cargo.toml
evm-client/src/: error.rs  lib.rs
evm-client/src/abi/: Channel.sol  FAApp.sol  Token.sol  mod.rs
housekeeping/: build.sh  coverage.sh
housekeeping/docker/release/: Dockerfile  Dockerfile.distroless
liberland-gen/: Cargo.toml  build.rs
liberland-gen/bytes/: metadata.scale
liberland-gen/src/: lib.rs
misc/hardhat-test/: register.sh  run.sh  transfer.sh
parachain-gen/: Cargo.toml  build.rs
parachain-gen/src/: lib.rs
relayer/: Cargo.toml
relayer/src/: main.rs  metrics.rs
relayer/src/cli/: copy_liquidity.rs  error.rs  fetch_ethereum_header.rs  mint_test_token.rs  mod.rs  utils.rs
relayer/src/cli/bridge/: mod.rs  test_transfers.rs  transfer_to_ethereum.rs  transfer_to_sora.rs
relayer/src/cli/bridge/register/: mod.rs
relayer/src/cli/bridge/register/evm/: initialize_channel.rs  mod.rs  reset_channel.rs
relayer/src/cli/bridge/register/liberland/: beefy.rs  mod.rs  trusted.rs
relayer/src/cli/bridge/register/parachain/: beefy.rs  mod.rs  trusted.rs
relayer/src/cli/bridge/register/sora/: mod.rs
relayer/src/cli/bridge/register/sora/evm/: app.rs  asset.rs  channels.rs  mod.rs
relayer/src/cli/bridge/register/sora/liberland/: mod.rs  trusted.rs
relayer/src/cli/bridge/register/sora/parachain/: beefy.rs  mod.rs  trusted.rs
relayer/src/cli/bridge/register/sora/sora/: trusted.rs
relayer/src/cli/bridge/register/sora/ton/: app.rs  channels.rs  mod.rs
relayer/src/cli/bridge/register/ton/: mod.rs  reset_channel.rs
relayer/src/cli/bridge/relay/: mod.rs
relayer/src/cli/bridge/relay/evm/: sora.rs
relayer/src/cli/bridge/relay/liberland/: mod.rs
relayer/src/cli/bridge/relay/liberland/liberland/: beefy.rs  mod.rs  trusted.rs
relayer/src/cli/bridge/relay/liberland/sora/: mod.rs  trusted.rs
relayer/src/cli/bridge/relay/parachain/parachain/: mod.rs  trusted.rs
relayer/src/cli/bridge/relay/parachain/sora/: mod.rs  trusted.rs
relayer/src/cli/bridge/relay/sora/: evm.rs  mod.rs
relayer/src/cli/bridge/relay/sora/liberland/: beefy.rs  mod.rs  trusted.rs
relayer/src/cli/bridge/relay/sora/parachain/: trusted.rs
relayer/src/cli/bridge/relay/sora/sora/: mod.rs  trusted.rs
relayer/src/cli/bridge/relay/ton/: mod.rs  sora.rs
relayer/src/cli/bridge/test/: clear.rs  clear_para.rs  evm.rs  mod.rs  para.rs  ton.rs
relayer/src/cli/bridge/transfer/: mod.rs
relayer/src/cli/bridge/transfer/evm/: sora.rs
relayer/src/cli/bridge/transfer/ton/: mod.rs  sora.rs
relayer/src/cli/old_bridge/: dump_assets.rs  mod.rs  register_assets.rs  relay.rs
relayer/src/ethereum/: mod.rs  proof_loader.rs
relayer/src/relay/: beefy_syncer.rs  ethereum.rs  ethereum_messages.rs  justification.rs  messages_subscription.rs  mod.rs  multisig_messages.rs  parachain.rs  parachain_messages.rs  substrate.rs  substrate_messages.rs
relayer/src/relay/evm/: evm_messages.rs  mod.rs  sub_messages.rs
relayer/src/relay/evm/multisig/: evm_sub.rs  mod.rs  sub_evm.rs
relayer/src/relay/sub/: multisig.rs
relayer/src/relay/ton/: mod.rs  ton_messages.rs
relayer/src/relay/ton/multisig/: mod.rs  ton_sub.rs
relayer/src/substrate/: beefy_subscription.rs  mod.rs  traits.rs  types.rs
relayer/src/ton/: mod.rs  types.rs
relayer/src/ton/contracts/: channel.rs  ton_app.rs
relayer/src/ton/wallet/: mod.rs  versions.rs
sub-client/: Cargo.toml
sub-client/src/: constant.rs  error.rs  lib.rs  metrics.rs  signer.rs  storage.rs  tx.rs  types.rs  unsigned_tx.rs
sub-client/src/abi/: channel.rs  evm_app.rs  leaf_provider.rs  mod.rs  multisig.rs  sudo.rs  system.rs  ton_app.rs
sub-client/src/config/: liberland.rs  mod.rs  parachain.rs  sora.rs
substrate-gen/: Cargo.toml  build.rs
substrate-gen/bytes/: metadata.scale  old_metadata.scale
substrate-gen/src/: lib.rs
substrate-gen/src/bytes/: metadata.scale
ton-client/: Cargo.toml
ton-client/src/: error.rs  lib.rs  types.rs
ton-client/src/contracts/: mod.rs
ton-client/src/wallet/: mod.rs  versions.rs
ton-proxy/: go.mod  go.sum  main.go
