[package]
name = "evm-client"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.2.1", features = ["full"] }
alloy-json-rpc = "0.2.1"
anyhow = "1.0.93"
reqwest = "0.12"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0.69"
tokio = { version = "1.41", features = ["full"] }
tower = "0.4"
tracing = "0.1.40"
url = "2.2.2"
