[package]
name = "bridge-relayer"
version = "0.1.0"
edition = "2021"

[dependencies]
sub-client = { path = "../sub-client" }
evm-client = { path = "../evm-client" }
ton-client = { path = "../ton-client" }
subxt = { version = "0.37.0" }
tokio = { version = "1.14.0", features = ["full"] }
url = "2.2.2"
http = "0.2.6"
anyhow = "1.0.51"
clap = { version = "4.4", features = ["derive"] }
async-trait = "0.1.56"
hex = "0.4.3"
hex-literal = "0.4.1"
futures = "0.3.17"
rayon = "1.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
codec = { package = "parity-scale-codec", version = "3", features = [
  "derive",
  "chain-error",
] }
thiserror = "1.0.30"
lru = "0.12"
rand = "0.8.5"
mmr-lib = { package = "ckb-merkle-mountain-range", version = "0.5.2" }
substrate-bip39 = "=0.4.5"
either = "1.11.0"
reqwest = "=0.11.22"
serde_with = { version = "3.9.0", features = ["hex", "base64"] }
toner = "0.2.22"
lazy_static = "1.5.0"
chrono = "0.4.38"
num-bigint = "0.4.6"
base64 = "0.22.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
metrics = "0.23.0"
metrics-exporter-prometheus = "0.15.3"
