[package]
name = "substrate-gen"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { git = "https://github.com/sora-xor/sora2-network.git" }
subxt = { version = "0.25.0" }
codec = { package = "parity-scale-codec", version = "3", features = ["derive"] }
scale-info = { version = "2", features = ["derive"] }
bridge-types = { git = "https://github.com/sora-xor/sora2-common.git" }
bridge-common = { git = "https://github.com/sora-xor/sora2-common.git", default-features = false }
beefy-light-client = { git = "https://github.com/sora-xor/sora2-common.git", default-features = false }
sp-beefy = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38" }
jsonrpsee = { version = "0.16.2", features = [
    "macros",
    "ws-client",
    "http-client",
] }
sp-core = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38", default-features = false }
sp-runtime = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38", default-features = false }
async-trait = "0.1.49"
serde = { version = "1.0.137", features = ["derive"] }
