[package]
name = "ton-client"
version = "0.1.0"
edition = "2021"

[dependencies]
sp-core = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "polkadot-v1.1.0" }
sp-runtime = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "polkadot-v1.1.0" }
num-bigint = "0.4.6"
reqwest = "0.12.5"
serde = "1.0.205"
toner = "0.2.22"
url = "2.5.2"
serde_with = "3.9.0"
log = "0.4.22"
thiserror = "1.0.63"
chrono = "0.4.38"
lazy_static = "1.5.0"
serde_json = "1.0.122"
http = "1.1.0"
hex = "0.4.3"
anyhow = "1.0.86"
